# buche

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
benches/: junk_modules.rs  no_color.rs  quiet.rs  real_calls.rs  skip_module.rs
examples/: clap.rs  docopt.rs  structopt.rs  timestamp.rs
examples/large-example/src/: main.rs
src/: lib.rs
tests/: debug_level.rs  debug_level_log.rs  error_level.rs  info_level.rs  module_inclusion.rs  no_levels_output.rs  quiet_trace_level.rs  trace_level.rs  warn_level.rs
tests/utils/: mod.rs
