[package]
authors = ["Franklin Delehelle <github@odena.eu>"]
description = "Logger that logs to stderr based on verbosity specified"
documentation = "https://docs.rs/buche/"
homepage = "https://github.com/delehef/buche"
keywords = ["log", "loglevel", "logging", "stderr", "buche"]
categories = ["development-tools::debugging"]
license = "MIT OR Apache-2.0"
name = "buche"
readme = "README.md"
repository = "https://github.com/delehef/buche"
version = "0.5.5"
edition = "2018"

[badges]
appveyor = { repository = "delehef/buche", branch = "master", service = "github" }
travis-ci = { repository = "delehef/buche", branch = "master" }
is-it-maintained-issue-resolution = { repository = "delehef/buche" }
is-it-maintained-open-issues = { repository = "delehef/buche" }
maintenance = { status = "actively-maintained" }

[dependencies]
atty = "^0.2.6"
chrono = { version = "0.4.10", optional = true, default-features = false, features = ["clock", "std", "wasmbind"] }
log = { version = "0.4.11", features = ["std"] }
termcolor = "~1.1"
thread_local = "~1.1"

[dev-dependencies]
clap = { version = "3", features = ["cargo"] }
docopt = "1.1"
serde = { version = "1.0", features = ["derive"] }
libc = "0.2.18"
structopt = "0.3.20"

[features]
default = ["timestamps"]
timestamps = ["chrono"]

[package.metadata.release]
tag-prefix = ""
publish = false
pre-release-hook = ["git-cliff", "-o", "CHANGELOG.md", "--tag", "{{version}}"]
allow-branch = ["master"]
